fixed archive page title truncation

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -49,6 +49,15 @@
   border-radius: 5px ! important;
 }
 
+.archive_title
+{
+  text-indent: 30px ! important;
+  max-width:100% ! important;
+  white-space: nowrap;
+  overflow:hidden ! important;
+  text-overflow: ellipsis ! important;
+}
+
 /* Styling for the search box */
 #search-input {
     display: block;
